# utn-buddy

./: .env.example  .gitignore  .prettierignore  AGENTS.md  README.md  commands.txt  debug_linkedin.html  index.html  lint-staged.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  todo.md
alembic/: env.py
alembic/versions/: 9386e5617b6f_initial_migration.py
apps/api/: README.md  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json
apps/api/app/: config.py  database.py  main.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/modules/auth/: deps.py  exceptions.py  router.py  schemas.py  service.py
apps/api/app/modules/auth/strategies/: github.py  google.py  jwt.py
apps/api/app/modules/conversations/: router.py  schemas.py
apps/api/app/modules/users/: exceptions.py  model.py  repo.py  router.py  schemas.py  service.py
apps/api/app/routers/: auth.py
apps/api/app/services/: auth.py
apps/api/migrations/: env.py
apps/api/src/: app.module.ts  main.ts
apps/api/src/modules/conversations/: conversations.controller.ts  conversations.service.ts
apps/api/src/modules/trpc/: trpc.module.ts  trpc.router.ts  trpc.service.ts
apps/web/: README.md  index.html  package.json  tsconfig.app.json
spite/: cli.py  main.py
spite/api/: dependencies.py  search.py
spite/cli/: main.py
spite/collectors/: base.py  linkedin.py
spite/commands/: __init__.py  jobs.py  search.py  version.py
spite/core/: config.py  database.py
spite/models/: job.py
spite/repositories/: base.py  job_repository.py
(+65 files in other folders)
